Fix nav bar with right side wrapping problems.

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -169,6 +169,7 @@ main {
 
 .navbar-header .link {
   display: inline-block;
+  float: left;
 }
 
 .naked-list {
